--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog</title>
+  <title>Andy's Blog</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -39,6 +39,13 @@
             <a class="nav-link" th:href="@{/}">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" th:href="@{/login}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/register}">Registration</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" th:href="@{/addpost}">Add Post</a>
           </li>
           <li class="nav-item">
@@ -56,7 +63,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
+            <h1>Andy's Blog</h1>
             <span class="subheading">A Blog Theme by Start Bootstrap</span>
           </div>
         </div>
