--- a/src/main/resources/templates/adduser.html
+++ b/src/main/resources/templates/adduser.html
@@ -11,17 +11,17 @@
     <title>Clean Blog - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
           type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
           rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="../css/clean-blog.min.css" rel="stylesheet">
+    <link href="css/clean-blog.min.css" rel="stylesheet">
 
 </head>
 
@@ -65,67 +65,65 @@
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="post-heading">
-                    <h1 th:text="${post.getTitle()}">title</h1>
-                    <h2 th:text="${post.getUser().getEmail()}">author</h2>
-                    <span class="meta" th:text="${post.getCategory()}"> category </span>
+                    <h1>Add your post</h1>
                 </div>
             </div>
         </div>
     </div>
 </header>
+
 <!-- Post Content -->
-<article>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-md-10 mx-auto">
-                <p th:text="${post.getContent()}">content</p>
-            </div>
-        </div>
-    </div>
-</article>
-<hr>
-<h1 th:align="center">Comments</h1>
-<div class="container" th:if="${post.getComments().size() > 0}">
-    <div class="row" th:each="comment : ${post.getComments()}">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <p th:text="${comment.getMessage()}">message</p>
-            <p th:text="${comment.getUser().getEmail()}">author</p>
-        </div>
-    </div>
-</div>
-<div class="container" th:if="${post.getComments().size() == 0}">
-    <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-            <p>This post is not commented yet!</p>
-        </div>
-    </div>
-</div>
-<h1 th:align="center">Add comment</h1>
+
 <article>
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <form th:align="center"
-                      th:action="@{'/addcomment/' + ${post.getId()} + '/4'}"
-                      th:object="${comment}"
+                      th:action="@{/register}"
+                      th:object="${user}"
                       th:method="post"
                       name="sentMessage" id="contactForm" novalidate>
                     <div class="control-group">
                         <div class="form-group floating-label-form-group controls">
                             <input th:align="center" type="text"
-                                   th:field="*{message}"
+                                   th:field="*{email}"
                                    class="form-control"
-                                   placeholder="input your comment"
-                                   id="name"
-                                   required data-validation-required-message="Please input your message">
+                                   placeholder="input your email"
+                                   id="name">
+                            <span th:errors="*{email}">email_error</span>
+
                             <br>
                         </div>
                     </div>
+                    <div class="control-group">
+                        <div class="form-group floating-label-form-group controls">
+                            <input th:align="center" type="password"
+                                   th:field="*{password}"
+                                   class="form-control"
+                                   placeholder="input your password">
+                            <span th:errors="*{password}">email_error</span>
+                                <br>
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <div class="form-group floating-label-form-group controls">
+                            <input th:align="center" type="password"
+                                   th:field="*{password_confirm}"
+                                   class="form-control"
+                                   placeholder="repeat your password">
+                            <span th:errors="*{password_confirm}">email_error</span>
+                            <span th:if="${passwordMessage}" th:text="${passwordMessage}">password_compare</span>
+
+                            <br>
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <button type="submit"
                                 class="btn btn-primary"
                                 id="sendMessageButton">
-                            send
+                            publish
                         </button>
                     </div>
                 </form>
@@ -133,7 +131,6 @@
         </div>
     </div>
 </article>
-
 
 <!-- Footer -->
 <footer>
@@ -173,11 +170,11 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-<script src="../vendor/jquery/jquery.min.js"></script>
-<script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="vendor/jquery/jquery.min.js"></script>
+<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 <!-- Custom scripts for this template -->
-<script src="../js/clean-blog.min.js"></script>
+<script src="js/clean-blog.min.js"></script>
 
 </body>
 
