--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -39,6 +39,13 @@
           <a class="nav-link" th:href="@{/}">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" th:href="@{/login}">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/register}">Registration</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link" th:href="@{/addpost}">Add Post</a>
         </li>
         <li class="nav-item">
